--- a/package.json
+++ b/package.json
@@ -1,41 +1,39 @@
 {
-  "name": "studynotion-client",
-  "description": "This is the client side of the StudyNotion App",
+  "name": "react-tailwind-css-starter-pack",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ramonak/react-progress-bar": "^5.0.3",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
-    "chart.js": "^4.3.0",
-    "copy-to-clipboard": "^3.3.3",
+    "@ramonak/react-progress-bar": "^5.2.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^8.2.2",
+    "install": "^0.13.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.43.9",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.7",
-    "react-otp-input": "^3.0.0",
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "react-super-responsive-table": "^5.2.1",
-    "react-type-animation": "^3.0.1",
-    "showdown": "^2.1.0",
-    "swiper": "^9.3.1",
-    "video-react": "^0.16.0",
+    "react-toastify": "^10.0.5",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thepranaygupta/react-tailwind-css-starter-pack.git"
+  },
+  "author": "Pranay Gupta",
+  "bugs": {
+    "url": "https://github.com/thepranaygupta/react-tailwind-css-starter-pack/issues"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd server && npm run dev",
     "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run server\""
@@ -59,10 +57,6 @@
     ]
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "concurrently": "^8.0.1",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.2.7"
   }
 }
